attempt to fix save-button on mobile (book-photo-input blocks button)

--- a/css/main.css
+++ b/css/main.css
@@ -252,6 +252,14 @@ textarea {
 
 /* Book Information Input */
 
+.book-photo-input input[type="file"] {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    opacity: 0;
+    pointer-events: none;
+}
+
 .book-information-input-div {
     display: inline-block;
     vertical-align: middle;
